[gd_scene load_steps=9 format=3 uid="uid://dxv4kf348go2a"]

[ext_resource type="Script" path="res://src/MainMenu/JoinMenu/join_menu.gd" id="1_w0pvo"]
[ext_resource type="Texture2D" uid="uid://cwgil6drkq2da" path="res://assets/images/Panel.png" id="2_ffmqk"]
[ext_resource type="FontFile" uid="uid://cx1s85o8g7b4u" path="res://assets/Kenney Future Square.ttf" id="3_8hiaa"]
[ext_resource type="Texture2D" uid="uid://o0nfxhatn0ex" path="res://assets/images/LineEdit.png" id="4_5bi18"]
[ext_resource type="Texture2D" uid="uid://bsudayvhfm1nh" path="res://assets/images/Default.png" id="5_vfjil"]
[ext_resource type="Texture2D" uid="uid://booyeg25k66q5" path="res://assets/images/Hover.png" id="6_xqpr3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nwxlg"]
texture = ExtResource("4_5bi18")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pfmoo"]
texture = ExtResource("4_5bi18")

[node name="JoinMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w0pvo")

[node name="Panel" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.0
offset_top = -360.0
offset_right = 276.0
offset_bottom = 235.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ffmqk")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.5
offset_top = -109.5
offset_right = 93.5
offset_bottom = 209.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_8hiaa")
theme_override_font_sizes/font_size = 32
text = "Join a Lobby"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_8hiaa")
text = "Enter IP:"
horizontal_alignment = 1

[node name="Control" type="Control" parent="Panel/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="IpEdit" type="LineEdit" parent="Panel/VBoxContainer/VBoxContainer2/Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 25)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_right = 100.0
offset_bottom = 31.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_8hiaa")
theme_override_styles/normal = SubResource("StyleBoxTexture_nwxlg")
placeholder_text = "0.0.0.0"
alignment = 1
max_length = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_8hiaa")
text = "Enter Port:"
horizontal_alignment = 1

[node name="Control" type="Control" parent="Panel/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="PortEdit" type="LineEdit" parent="Panel/VBoxContainer/VBoxContainer/Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 25)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_right = 100.0
offset_bottom = 31.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_8hiaa")
theme_override_styles/normal = SubResource("StyleBoxTexture_pfmoo")
placeholder_text = "9999"
alignment = 1
max_length = 5

[node name="Control" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 85)
layout_mode = 2

[node name="JoinButton" type="TextureButton" parent="Panel/VBoxContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_right = 80.0
offset_bottom = 85.0
grow_horizontal = 2
texture_normal = ExtResource("5_vfjil")
texture_hover = ExtResource("6_xqpr3")

[node name="Label" type="Label" parent="Panel/VBoxContainer/Control/JoinButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_8hiaa")
theme_override_font_sizes/font_size = 26
text = "Join game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control2" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 85)
layout_mode = 2

[node name="BackButton" type="TextureButton" parent="Panel/VBoxContainer/Control2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_right = 80.0
offset_bottom = 85.0
grow_horizontal = 2
texture_normal = ExtResource("5_vfjil")
texture_hover = ExtResource("6_xqpr3")

[node name="Label" type="Label" parent="Panel/VBoxContainer/Control2/BackButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_8hiaa")
theme_override_font_sizes/font_size = 26
text = "MENU"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Panel/VBoxContainer/Control/JoinButton" to="." method="_on_join_button_pressed"]
